--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   font_awesome_flutter:
   intl:
   firebase_database:
-  
+  shared_preferences:
+  firebase_auth:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
