--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 *.iws
 .idea/
 android/app/google-services.json
+android/key.properties
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
